# cartographer

./: .dockerignore  .env.docker  .env.docker.example  .env.example  .gitignore  .terraformignore  DOCKER_SETUP.md  Dockerfile.agent  Dockerfile.web  GUIDE_ja.md  Makefile  README.md  STYLING_REVIEW.md  cabal.project  cachix-test.txt  docker-compose.yml  env.example  flake.nix  hie-bios.sh  hie.yaml  local-dev.md  middleware.ts  next.config.ts  package-lock.json  package.json  playwright.config.ts  process-compose.yml  result  tailwind.config.ts  test.sh  tsconfig.json  vercel.json  verify.txt
.agent/rules/: general.md  haskell-backend.md  haskell-m36.md  haskell.md  m36.md  nix-flake.md  nixpkgs.md  polysemy.md  servant.md  tdd-haskell.md  tutoriald.md
.claude/: claude.md
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: 83zy5xzk7nqi67xfv7841ch6lxp186mh-source
.github/workflows/: ci.yml  deploy-tag.yml  deploy.yml  verify-cachix.yml
agents/: AgentManager.ts  PtolemyAgent.ts  index.ts  llm.ts  types.ts
app/: globals.css  layout.tsx  page.tsx
app/_components/: HomePageClient.tsx
app/admin/: page.tsx
app/admin/_components/: AdminPanelContext.tsx  AdminSidebar.tsx  AdminSidebarLayout.tsx
app/admin/_components/sidebar-15/: Calendars.tsx  DatePicker.tsx  NavFavorites.tsx  NavMain.tsx  NavSecondary.tsx  NavUser.tsx  NavWorkspaces.tsx  SidebarLeft.tsx  SidebarRight.tsx  TeamSwitcher.tsx  data.ts
app/admin/_components/ui/: avatar.tsx  calendar.tsx  dropdown-menu.tsx  sheet.tsx  sidebar.tsx  tooltip.tsx
app/api/sessions/: route.ts
app/api/sessions/[sessionId]/: route.ts
app/api/sessions/form-suggestions/: route.ts
app/api/sessions/goal/: route.ts
app/components/: AboutCartographerButton.tsx  AppFooter.tsx  AppHeader.tsx  MarketingNav.tsx  RealtimeTranscription.tsx  SessionAdminInline.tsx  ThemeToggle.tsx  UserMap.tsx
app/components/layout/: DashboardLayout.tsx
app/components/report/: ReportTasteSelect.tsx  StatementTagPopover.tsx
app/components/sessions/: CreateSessionForm.tsx  SessionSurveyPreview.tsx
app/components/ui/: Button.tsx  Skeleton.tsx  accordion.tsx  alert-dialog.tsx  alert.tsx  badge.tsx  breadcrumb.tsx  card.tsx  field.tsx  input.tsx  mode-toggle.tsx  separator.tsx  sidebar.tsx  spinner.tsx  status-badge.tsx  textarea.tsx
app/dashboard/: page.tsx
app/dashboard/_components/: DashboardClient.tsx  SessionMetrics.tsx  SessionNavigator.tsx  SessionSummary.tsx  SessionWorkspace.tsx  types.ts
app/lib/: auth.ts  llm-provider.ts  llm.ts  supabase.ts  useUserId.ts  utils.ts
app/lib/api/: client.ts  types.ts
app/lib/server/: event-threads.ts  public-sessions.ts  session-access.ts  session-reports.ts
app/sessions/: page.tsx
app/sessions/[sessionId]/: client-page.tsx  page.tsx
app/sessions/_components/: SessionAdminDashboard.tsx
app/sessions/new/: client-page.tsx  page.tsx
app/timeline/: page.tsx
app/timeline/_components/: SessionCard.tsx
backend/: cartographer-backend.cabal
backend/app/: Main.hs  SchemaDestructivePhase1.hs  SchemaEvolutionPhase1.hs  SchemaEvolutionPhase2.hs  Test.hs
backend/src/: Foundation.hs  Lib.hs
backend/src/Cartographer/: Database.hs  Domain.hs  Event.hs  EventStore.hs
backend/src/Domain/: Projection.hs  Types.hs
backend/src/Effect/: Persistence.hs  Projection.hs  User.hs
backend/src/Feature/Blog/: API.hs  Handler.hs  Repository.hs
backend/src/Feature/Session/: API.hs  Handler.hs
backend/src/Feature/User/: API.hs  Handler.hs  Repository.hs
backend/src/Implementation/: User.hs
backend/src/Infrastructure/DB/: Model.hs
backend/src/Web/: API.hs  Handler.hs  Orphans.hs  Server.hs  Types.hs
backend/test/Cartographer/: DomainSpec.hs
backend/test/Effect/: PersistenceSpec.hs
backend/test/M36/: SchemaDestructivePhase1.hs  SchemaDestructivePhase2.hs  SchemaEvolutionPhase1.hs  SchemaEvolutionPhase2.hs  TestConcurrent.hs  TestPerformance.hs  TestProjection.hs  TestRecovery.hs
backend/test/Web/: SessionSpec.hs
backend/test/Web/API/: SessionSpec.hs
database/: process-compose.yaml  schema.sql
doc/: Automated_NixOS_AWS_Deployment.md.markdown  cartographer.2hop.txt  deployment.md  infrastructure-roadmap.md  staging-handover.md  staging-setup.md  troubleshooting.md
doc/m36/: cartographer_integration.md  sample_session.asciinema.json
docs/: DESIGN_EVENT_THREAD_AGENT_SYSTEM.md  design.md  steps.md
frontend/: .gitignore  biome.json  next.config.ts  package-lock.json  package.json  tsconfig.json
frontend/agents/: AgentManager.ts  llm.ts  types.ts  utils.ts
frontend/app/: globals.css  layout.tsx
frontend/app/lib/: auth.ts  llm.ts  metadata.ts  useUserId.ts
frontend/supabase/migrations/: 20240830_free_text_responses.sql  20251227175827_add_updated_at_and_model_default.sql
infra/supabase/: fetch-supabase-compose.sh
infra/terraform/: README.md  cloudflare.tf  compute.tf  infra-cartographer-prod.json  infra-cartographer-staging.json  main.tf  network.tf  outputs.tf  prod.tfvars  secrets.tf  staging.tfvars  storage.tf  terraform.tfvars  terraform.tfvars.example  variables.tf
infra/tfc-bootstrap/: iam.tf  main.tf  teams.tf  terraform.tfvars.example  variables.tf  workspaces.tf
nix/: pg_jsonschema.nix
nixos/: application.nix  infrastructure.nix  server.nix
prisma/: schema.prisma
prisma/migrations/: migration_lock.toml
prisma/migrations/20241015120000_add-session-visibility/: migration.sql
prisma/migrations/20251012010441_init/: migration.sql
scripts/: db-up.sh  setup-docker-env.ts  test-schema-destructive.sh  test-schema-evolution.sh  verify_m36.bash
supabase/: config.toml  kong.yml  schema.sql
supabase/migrations/: 20240830_free_text_responses.sql  20240906_add_updated_at_to_responses.sql  20251130132000_disable_auto_generation_default.sql  20251211065001_remote_schema.sql  20251230140000_add_anon_permissions.sql
supabase/schemas/: public.sql
tests/: example.spec.ts  session-response-modification.spec.ts
tmp/: agentic.md  steps.md
(+78 files in other folders)
