cabal-version: 3.0
name: cartographer-backend
version: 0.1.0.0
synopsis: Haskell backend for Cartographer with Event Sourcing
license: MIT
author: Yui
maintainer: nishimura@plural-reality.com
build-type: Simple

common common-options
  default-language: GHC2021
  default-extensions:
    DataKinds
    DeriveAnyClass
    DerivingStrategies
    DerivingVia
    DuplicateRecordFields
    LambdaCase
    NoFieldSelectors
    OverloadedRecordDot
    OverloadedStrings
    RecordWildCards
    TypeApplications
    TypeFamilies

  ghc-options:
    -Wall
    -Wcompat
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wmissing-export-lists
    -Wmissing-home-modules
    -Wpartial-fields
    -Wredundant-constraints

library
  import: common-options
  hs-source-dirs: src
  exposed-modules:
    Cartographer.Database
    Cartographer.Domain
    Lib

  build-depends:
    aeson >=2.0 && <3,
    base >=4.7 && <5,
    bytestring >=0.10 && <0.13,
    containers >=0.6 && <0.8,
    deepseq >=1.4 && <2,
    esqueleto >=3.5 && <4,
    fast-logger >=3.0 && <4,
    monad-logger >=0.3 && <0.4,
    mtl >=2.2 && <3,
    persistent >=2.14 && <3,
    persistent-postgresql >=2.13 && <3,
    persistent-template >=2.12 && <3,
    polysemy >=1.9 && <2,
    project-m36,
    resource-pool >=0.2 && <0.5,
    servant >=0.19 && <0.21,
    servant-server >=0.19 && <0.21,
    text >=1.2 && <3,
    time >=1.9 && <2,
    unliftio >=0.2 && <0.3,
    unliftio-core >=0.2 && <0.3,
    uuid >=1.3 && <2,
    wai >=3.2 && <4,
    warp >=3.3 && <4,
    winery >=1.0,

executable cartographer-backend
  import: common-options
  hs-source-dirs: app
  main-is: Main.hs
  build-depends:
    base >=4.7 && <5,
    bytestring >=0.10 && <0.13,
    cartographer-backend,
    dotenv >=0.11 && <0.13,
    monad-logger >=0.3 && <0.4,
    persistent >=2.14 && <3,
    persistent-postgresql >=2.13 && <3,
    servant-server >=0.19 && <0.21,
    text >=1.2 && <3,
    warp >=3.3 && <4,

test-suite cartographer-backend-test
  import: common-options
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Spec.hs
  build-depends:
    base >=4.7 && <5,
    cartographer-backend,
    hspec >=2.7 && <3,
    hspec-discover >=2.7 && <3,
    project-m36,

  build-tool-depends: hspec-discover:hspec-discover
